feature(todo): add update todo item
